# rust_cli_template

./: .gitignore  .gitpod.Dockerfile  .pre-commit-config.yaml  .releaserc.yml  .releaserc.yml.liquid  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.md.liquid  Cargo.toml  Cargo.toml.liquid  Dockerfile.liquid  Justfile  LICENSE-GPL-3.0-OR-LATER  LICENSE-MIT  README.md.liquid  REUSE.toml  SECURITY.md.liquid  about.toml  cargo-generate.toml  project_setup.rhai
.github/: dependabot.yaml.liquid
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml.liquid  build_container.yaml  ci.yaml  ci.yaml.liquid  code_coverage.yaml  get_next_version.yaml.liquid  release.yaml.liquid  release_upload.yaml.liquid  scorecard.yaml.liquid
.reuse/: dep5
guide/: book.toml
meta/: LICENSE-HEADER  LICENSE-HEADER.liquid  licenses.hbs
src/{{project-name | snake_case}}/: main.rs
src/{{project-name | snake_case}}_lib/: lib.rs
