[package]
name = "{{project-name}}"
version = "1.0.0-alpha.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/{{gh_user}}/{{project-name}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "{{project-name}}_lib"
path = "src/{{project-name}}/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "{{project-name}}"
path = "src/{{project-name}}/main.rs"

[dependencies]


[build]
jobs = 1
incremental = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
strip = 'true'
overflow-checks = true
lto = true
codegen-units = 1
